# securemark-tls-esp-idf

examples/esp-idf/: CMakeLists.txt  README.md  sdkconfig
examples/esp-idf/main/: CMakeLists.txt  main.c
examples/esp-idf/main/profile/mbedtls_th_api/: th_aes.c  th_ecdh.c  th_ecdsa.c  th_sha.c
